fix: fix y overflow in current dataset name

--- a/app/scss/_dataset.scss
+++ b/app/scss/_dataset.scss
@@ -25,7 +25,7 @@ $hover-highlight-color: #F6F8FA;
     display: inline-block;
     height: 100%;
     border-right: 1px solid #484d65;
-    padding: 9px 28px 9px 9px;
+    padding: 8px 28px 0 9px;
     display: flex;
     flex-direction: row;
 
